--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p>created by The Awwwesomes in 2017</p>
             </div>
             <div class="footer-content-right">
-                <form action="/" method="POST">
+                <form action="/template" method="post">
                     <p>
                         <label for="email-author">name</label>
                         <input type="text" name="author" id="email-author">
